labs/terraform-hands-on/modules/ec2/main.tf

#create security group to use with the instance - allow 22 ssh , allow 80 http connections from any ip
resource "aws_security_group" "allow_ssh_http" {
  name        = "allow_ssh_http"
  description = "Allow SSH and HTTP inbound traffic"

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}

# create aws instance with with type input from user
resource "aws_instance" "web" {
  ami           = var.ami_id
  instance_type = var.instance_type
  subnet_id     = aws_subnet.public[0].id
  associate_public_ip_address = var.assign_public_ip 
  vpc_security_group_ids = [aws_security_group.allow_ssh_http.id]

  tags = {
    Name = "hands-on-ec2"
  }
}
